# VERS-Models

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: S2SNoAttn.json
src/: Language.py  __init__.py  eval.py  train.py
src/models/: BaseModel.py  S2SNoAttn.py  __init__.py
src/vers/: Language.py  __init__.py  cli.py  main.py  train.py
src/vers/models/: BaseModel.py  S2SMultiHeadAttn.py  S2SNoAttn.py  Transfo.py  __init__.py
src/vers_models/: Language.py  __about__.py  cli.py  eval.py  main.py  profiler.py  train.py
src/vers_models/models/: BaseModel.py
